2004-02-25  Martin Baulig  <martin@ximian.com>

	* class.c (_mono_class_get_instantiation_name): Added `int offset'
	argument for nested types.
	(mono_class_create_generic): Added support for nested generictypes.

	* class.h (MonoGenericInst): Added `MonoType *nested_in' and
	`GList *nested'.

	* icall.c (ves_icall_MonoGenericInst_GetNestedTypes): New icall.

	* reflection.c (method_encode_signature): Increase the minimum
	value of `size' from 10 to 11.
	(mono_reflection_bind_generic_parameters): Take `int type_argc'
	and `MonoType **types' arguments instead of the `MonoArray
	*types'; added `MonoType *nested_in'.  Recursively instantiate
	nested classes.	

2004-02-23  Zoltan Varga  <vargaz@freemail.hu>

	* appdomain.h (MonoDomain): Add preallocated null_reference_ex and 
	stack_overflow_ex members which are used by exception handling.

	* appdomain.c (mono_runtime_init): Initialize the new members.

	* gc.c (mono_gc_enable): New helper function.
	* gc.c (mono_gc_disable): New helper function.

2004-02-23  Martin Baulig  <martin@ximian.com>

	* icall.c: I must have been really stupid - make it actually work
	this time ;-)

2004-02-23  Martin Baulig  <martin@ximian.com>

	* loader.c (method_from_memberref): Only inflate the method if
	it's in another klass.

2004-02-23  Martin Baulig  <martin@ximian.com>

	* class.c (mono_class_inflate_generic_type): Fixed two bugs.
	(mono_class_init): If we're a generic instance and an interface,
	compute `class->interface_id'; also create `class->interfaces'
	here and inflate them.

	* metadata.c (do_mono_metadata_parse_generic_inst): Compute
	`ginst->is_open'.
	(mono_type_stack_size): Fix for MONO_TYPE_GENERICINST.

	* reflection.c (mono_image_create_token): Allow "MonoGenericInst".

2004-02-15  Miguel de Icaza  <miguel@ximian.com>

	* reflection.c (method_encode_code): Improved the error message
	generated by the exception.

2004-02-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>
