@@ -1,3 +1,9 @@
+2004-02-26  Zoltan Varga  <vargaz@freemail.hu>
+
+	* gc.c (run_finalize): Avoid finalizing the object representing the
+	finalizer thread.
+	(finalizer_thread): Fix warning.
+
 2004-02-25  Martin Baulig  <martin@ximian.com>
 
 	* class.c (_mono_class_get_instantiation_name): Added `int offset'
